--- a/HW0/HW0.qmd
+++ b/HW0/HW0.qmd
@@ -165,15 +165,15 @@ summary(lm)$coefficients %>%
   data.frame() %>% 
   mutate(
     name = c(
-      "Intercept", 
-      "Diet 2 Factor", 
-      "Diet 3 Factor", 
-      "Diet 4 Factor", 
+      "Diet 1 Estimate", 
+      "Diet 2 Modification Factor", 
+      "Diet 3 Modification Factor", 
+      "Diet 4 Modification Factor", 
       
-      "Time Slope", 
-      "Diet 2 Factor", 
-      "Diet 3 Factor", 
-      "Diet 4 Factor"
+      "Diet 1 Estimate",
+      "Diet 2 Modification Factor", 
+      "Diet 3 Modification Factor", 
+      "Diet 4 Modification Factor"
     )
   ) %>% 
   
@@ -191,7 +191,9 @@ res %>%
   kable_styling(
     latex_options = c("striped", "condensed", "HOLD_position"), 
     full_width = F
-  )
+  ) %>% 
+  pack_rows("Intercept",1 , 4) %>% 
+  pack_rows("Slope",5 , 8) 
 
 ```
 
